--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>my scond webasite</h1>
+    <h1>my scond webasite.</h1>
+    <p> good mornig bangladesh.why so?</p>
 </body>
 </html>
